# DineBuddy

./: .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  et --soft HEAD@{1}
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  create_admin.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2025_12_01_1800-e147a51226c7_add_menu.py  2025_12_09_1014-4aaf4ef923aa_initial_schema_with_users_and_customers_.py  2025_12_09_2018-238816036641_merge_heads.py  2025_12_10_0553-d35e97484aef_add_restaurant.py  2025_12_10_1021-0bed3535aabb_add_menucategory.py  2025_12_11_1346-d96a40c9bd47_add_unique_constraint_to_restaurant_name.py  2025_12_16_1503-495e4f5aa95a_add_coloums_in_restaurant_table_with_.py  2025_12_17_2048-ce5b70618a93_add_user_restaurants_junction_table.py  2025_12_22_1229-ed741d331149_creating_user_restaurant_map_table.py  2026_01_05_0842-258f89b28c5e_updated_the_restaurant_table_for_.py  2026_01_05_2210-c33fde117a87_restaurant_settings.py  2026_01_06_0221-40e79799ab7a_add_restaurant_admin_to_userrole_enum.py  2026_01_07_0705-54c1326d414d_menu_category_table.py  2026_01_08_1417-76db1aa9fa96_seed_global_categories.py  2026_01_08_1442-809d0eae8d7c_menu_items.py  2026_01_11_2150-0b26b4720191_fix_menu_category_unique_constraint_and_.py  2026_01_12_1755-8e1d942ad168_menu_item_variants.py  (+9 more)
backend/app/: Dinebuddy.postman_collection.json  __init__.py  main.py  restaurant.postman_collection.json
backend/docs/: RELATIONSHIP_DIAGRAM.md  RELATIONSHIP_DIAGRAM.txt
backend/tests/: conftest.py
(+85 files in other folders)
